changes to conclusion

--- a/Report.Rmd
+++ b/Report.Rmd
@@ -305,18 +305,19 @@ St (the Stokes number) is the ratio of the particle's momentum response time to 
 
 Fr (the Froud number) is the ratio of average flow velocity to the wave velocity in shallow water. So high Fr means fast rapid flow (turbulent), and low Fr means slow tranquil flow (laminar). In our result, Fr in general has a negative effects on the variance, but such negative effects decreases while Fr increases. In other words, higher Fr is associated with higher variance. Therefore, with low Fr, the particles distribute in a more normal, symmetric way with few outliers; with high Fr, the particles distribution has greater variance.
 
-The interaction between Re and Fr is significant in our results, so we can conclude that Re and Fr combining is very important in affecting particles' distribution motion, while the effects of St are less significant. When the flow is laminar, Re and Fr are both low, the probability distribution for particle cluster volumes is spread out, highly skewed, and is heavily influenced by outliers. When the flow is turbulent, the probability distribution for particle cluster volumes is fairly normal, symmetric, and with few outliers. We suspect that in the laminar flows, the particle disturbances are more localized, so this results in higher variances, skewness, and kurtosis in the particle distributions. On the other hand, in the turbulent flows, the particles disturbances are more randomized, so the particle distribution is more normal. 
+The interaction between Re and Fr is significant in our results, so we can conclude that Re and Fr combining is very important in affecting particles' distribution motion, while the effects of St are less significant. When the flow is laminar, Re and Fr are both low, the probability distribution for particle cluster volumes is spread out, highly skewed, and is heavily influenced by outliers. When the flow is turbulent, the probability distribution for particle cluster volumes is fairly normal, symmetric, and with few outliers.
 
 From the SE table (Appendix 1.3), we can see that the 1st raw moment has very small standard error and low uncertainty. The uncertainty increases as moments increases--higher order moments generally have higher uncertainty than lower order moments. It is worth-noticing that SE is the highest when St, Fr, Re are all high. This indicates that our prediction is more reliable when the levels of three parameters vary. 
 
 ## Conclusion
 
-Since our response variables were highly linearly correlated, we came to the conclusion that the model which best fit the first moment would also be a good fit for the other models. We saw that after transforming Fr and Re into categorical variables, we greatly increased the Test MSE of our models. Taking the second central moment as an example, we saw some statistically significant interaction terms between Re and Fr, which, because of the hierarchy principle, means we included the order 1 terms Re_category and Fr_categrory as well. We predicted that the variance of the particle cluster would increase significantly if the gravitational acceleration and Reynold's number jointly decreased. When fitting a model only with the linear terms St, Re_category, and Fr_category, we saw that there was a statistically significant increase in the variance when the Reynold's number and gravitational acceleration decreased independently, but to a much lesser extent than with the interaction term.
+In this study, we analyzed the effect of Re, Fr, and St to the distribution of particle cluster volumes. Since our response variables were highly linearly correlated, we came to the conclusion that the model which best fit the first moment would also be a good fit for the other models. We saw that after transforming Fr and Re into categorical variables, we greatly increased the Test MSE of our models. Taking the second central moment as an example, we saw some statistically significant interaction terms between Re and Fr, which, because of the hierarchy principle, means we included the order 1 terms Re_category and Fr_categrory as well. We predicted that the variance of the particle cluster would increase significantly if the gravitational acceleration and Reynold's number jointly decreased. When fitting a model only with the linear terms St, Re_category, and Fr_category, we saw that there was a statistically significant increase in the variance when the Reynold's number and gravitational acceleration decreased independently, but to a much lesser extent than with the interaction term.
 
-In this study, we analyzed the effect of Re, Fr, and St to the distribution of particle cluster volumns. It is important to note some limitation of our results: First, we have a relatively small training dataset (<100). This might result in issues relating to generalization and data imbalance. Second, we only have three levels for Re and Fr. There will be a serious issue of bad extrapolation if we use this model to predict tuples with Re and Fr outside of these three levels. Therefore, this model is only reliable with these three levels of Re and Fr.
+We believe these results make sense given the physical context. In a laminar flow, particle disturbances are localized, meaning there is a small subset of the particles which behave differently from the rest of the cluster volume. This means that the variance, skewness, and kurtosis are expected to be higher. By contrast, in a turbulent flow, the particle behavior is much more chaotic and randomly distributed. This means that there would be a more normal particle distribution.
 
-We believe that our model provides good prediction and on the probability distribution of particle cluster volumns, and interpretation on how Re, Fr, St affect the flows. With high Re, low St, low Fr, The turbulent flows' particles distribute in a more normal, symmetric way with few outliers.
-When the flow is laminar, Re and Fr are both low, the probability distribution for particle cluster volumes is spread out, highly skewed, and is heavily influenced by outliers. When the flow is turbulent, the probability distribution for particle cluster volumes is fairly normal, symmetric, and with few outliers. The standard error of our results explode when the flow is turbulent (all three parameters are high), turbulent distributions are harder to predict. In future study, we hope to address this issue and explore how to produce more accurate prediction. 
+It is important to note some limitation of our results: firstly, we have a relatively small training dataset (<100). This might result in issues relating to generalization and data imbalance. Second, we only have three levels for Re and Fr. While this improved model fit and predictive power with cross validation, there would likely be an inference issue if we wanted to predict particle distributions for Fr and Re values outside of the three categories. Therefore, this model is only reliable with these three levels of Re and Fr.
+
+It is also important to note that we used a linear model to fit the data. However, since we are dealing with chaotic particle distributions, it is unlikely that the underlying data-generating model is a generalized linear model. Along the same lines, our data only had three input predictors, so we expect that there are many confounding variables, such as wind, altitude, and climate. In future studies, we hope to address this issue and explore how to produce more accurate predictions with more data and input variables. 
 
 ## Citations
 
